--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,51 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="main-content" side="start" menuId="main-menu" class="custom-menu" #mainMenu>
+    <ion-header class="toolbar-header">
+      <img src="assets/icon/writing-tool.png" class="menu-icon" />
+      <ion-title class="menu-title">Notepad</ion-title>
+    </ion-header>
+    <ion-content>
+      <ion-searchbar class="search-bar" placeholder="Search..."></ion-searchbar>
+      <div class="menu-header">Menu</div>
+      <ion-list color="white">
+        <ion-item 
+          (click)="navigateTo('notes'); closeMenu()"
+          class="menu-item" 
+          [ngClass]="{'active': isActivePage('notes')}">
+          <ion-icon slot="start" name="document-outline"></ion-icon>
+          <ion-label>Notes</ion-label>
+        </ion-item>
+        <ion-item 
+          (click)="navigateTo('create-new-note'); closeMenu()" 
+          class="menu-item" 
+          [ngClass]="{'active': isActivePage('create-new-note')}">
+          <ion-icon slot="start" name="create-outline"></ion-icon>
+          <ion-label>Create New Note</ion-label>
+        </ion-item>
+        <ion-item 
+          (click)="navigateTo('calendar'); closeMenu()" 
+          class="menu-item" 
+          [ngClass]="{'active': isActivePage('calendar')}">
+          <ion-icon slot="start" name="calendar-outline"></ion-icon>
+          <ion-label>Calendar</ion-label>
+        </ion-item>
+        <ion-item 
+          (click)="navigateTo('about'); closeMenu()" 
+          class="menu-item" 
+          [ngClass]="{'active': isActivePage('about')}">
+          <ion-icon slot="start" name="information-circle-outline"></ion-icon>
+          <ion-label>About</ion-label>
+        </ion-item>
+        <ion-item 
+          (click)="navigateTo('settings'); closeMenu()" 
+          class="menu-item" 
+          [ngClass]="{'active': isActivePage('settings')}">
+          <ion-icon slot="start" name="settings-outline"></ion-icon>
+          <ion-label>Settings</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
