changes in create-note page

--- a/src/app/create-new-note/create-new-note.page.html
+++ b/src/app/create-new-note/create-new-note.page.html
@@ -21,5 +21,6 @@
 </ion-header>
 
 <ion-content class="note-content">
-  <ion-textarea placeholder="Write your note here..." auto-grow="true"></ion-textarea>
+  <ion-textarea placeholder="Title" auto-grow="true" cols="1" rows="1" class="title-text"></ion-textarea>
+  <ion-textarea placeholder="Note here" auto-grow="true" class="note-text" cols="1" rows="1"></ion-textarea>
 </ion-content>
