--- a/src/app/notes/notes.page.scss
+++ b/src/app/notes/notes.page.scss
@@ -50,7 +50,7 @@ ion-toolbar {
 
 /* FAB button styling */
 ion-fab-button {
-  --background: #000000; /* Black background */
+  --background: #2b75ff; /* Black background */
   --color: #ffffff; /* White icon color */
 }
 
