--- a/src/app/notes/notes.page.html
+++ b/src/app/notes/notes.page.html
@@ -14,7 +14,7 @@
 
 <ion-content id="main-content" class="ion-padding">
   <ion-fab vertical="bottom" horizontal="end">
-    <ion-fab-button (click)="goToNewPage()">
+    <ion-fab-button (click)="navigateTo('create-new-note')">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
