--- a/src/app/popover/popover.component.html
+++ b/src/app/popover/popover.component.html
@@ -1,4 +1,4 @@
-<ion-list>
+<ion-list class="list">
   <ion-item button (click)="onDelete()">Delete</ion-item>
   <ion-item button (click)="onShare()">Share</ion-item>
 </ion-list>
