--- a/src/app/notes/notes.page.html
+++ b/src/app/notes/notes.page.html
@@ -18,65 +18,17 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-</ion-content>
-
-
-
-<!-- <ion-menu contentId="main-content" side="start" menuId="main-menu" class="custom-menu">
   
-<ion-header class="toolbar-header">
-    <img src="assets/icon/writing-tool.png" class="menu-icon" />
-    <ion-title class="menu-title">Notepad</ion-title>
-</ion-header>
 
+  <div class="cards-container">
+    <ion-card *ngFor="let note of notes" class="note-card" [ngStyle]="{'--background': getRandomColor()}">
+      <ion-card-header>
+        <ion-card-title>{{ note.title }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        {{ note.content }}
+      </ion-card-content>
+    </ion-card>
+  </div>
 
-  <ion-content>
-    <ion-searchbar class="search-bar" placeholder="Search..."></ion-searchbar>
-    <div class="menu-header">Menu</div>
-
-    <ion-list color="white">
-
-      <ion-item 
-      (click)="navigateTo('notes')" 
-      class="menu-item" 
-      [ngClass]="{'active': isActivePage('notes')}">
-      <ion-icon slot="start" name="document-outline"></ion-icon>
-      <ion-label>Notes</ion-label>
-    </ion-item>
-    
-    
-    <ion-item 
-      (click)="navigateTo('create-new-note')" 
-      class="menu-item" 
-      [ngClass]="{'active': isActivePage('create-new-note')}">
-      <ion-icon slot="start" name="create-outline"></ion-icon>
-      <ion-label>Create New Note</ion-label>
-    </ion-item>
-
-    <ion-item 
-    (click)="navigateTo('calendar')" 
-    class="menu-item" 
-    [ngClass]="{'active': isActivePage('calendar')}">
-    <ion-icon slot="start" name="calendar-outline"></ion-icon>
-    <ion-label>Calendar</ion-label>
-    </ion-item>
-
-    <ion-item 
-    (click)="navigateTo('about')" 
-    class="menu-item" 
-    [ngClass]="{'active': isActivePage('about')}">
-    <ion-icon slot="start" name="information-circle-outline"></ion-icon>
-    <ion-label>About</ion-label>
-    </ion-item>
-
-    <ion-item 
-    (click)="navigateTo('settings')" 
-    class="menu-item" 
-    [ngClass]="{'active': isActivePage('settings')}">
-    <ion-icon slot="start" name="settings-outline"></ion-icon>
-    <ion-label>Settings</ion-label>
-    </ion-item>
-
-    </ion-list>
-  </ion-content>
-</ion-menu> -->
+</ion-content>
