--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <ion-title class="menu-title">Notepad</ion-title>
     </ion-header>
     <ion-content>
-      <ion-searchbar class="search-bar" placeholder="Search..."></ion-searchbar>
+      <ion-searchbar class="search-bar" placeholder="Search..." (ionFocus)="onSearchMenu()"></ion-searchbar>
       <div class="menu-header">Menu</div>
       <ion-list color="white">
         <ion-item 
@@ -21,6 +21,13 @@
           [ngClass]="{'active': isActivePage('create-new-note')}">
           <ion-icon slot="start" name="create-outline"></ion-icon>
           <ion-label>Create New Note</ion-label>
+        </ion-item>
+        <ion-item 
+          (click)="navigateTo('bookmark'); closeMenu()" 
+          class="menu-item" 
+          [ngClass]="{'active': isActivePage('bookmark')}">
+          <ion-icon slot="start" name="bookmark-outline"></ion-icon>
+          <ion-label>Bookmark</ion-label>
         </ion-item>
         <ion-item 
           (click)="navigateTo('calendar'); closeMenu()" 
