--- a/src/app/archive/archive.page.html
+++ b/src/app/archive/archive.page.html
@@ -21,7 +21,7 @@
       </ion-button>
       <ion-button (click)="unarchiveSelectedNotes()">
         <mat-icon class="material-symbols-outlined">
-          archive
+          unarchive
           </mat-icon>
       </ion-button>
       <ion-button (click)="shareSelectedNotes()">
