--- a/src/app/calendar/calendar.page.html
+++ b/src/app/calendar/calendar.page.html
@@ -1,13 +1,42 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>calendar</ion-title>
+<ion-header>
+  <ion-toolbar class="toolbar-calendar">
+    <ion-buttons slot="start">
+      <ion-menu-button style="font-weight: bold; color: rgb(0, 0, 0);"></ion-menu-button>
+    </ion-buttons>
+    <ion-title  class="date-display">{{ selectedDate | date: 'MMMM d, yyyy' }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">calendar</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content id="main-content" class="content-calendar">
+  <!-- Centered Calendar -->
+  <div class="calendar-container">
+    <ion-datetime
+      [(ngModel)]="selectedDate"
+      (ionChange)="onDateSelected($event)"
+      display-format="MMM d, yyyy"
+      class="material-calendar">
+    </ion-datetime>
+  </div>
+
+  <!-- Flexible Area for Notes -->
+  <div class="notes-area">
+    <ng-container *ngIf="notes && notes.length > 0;">
+      <ion-list>
+        <ion-item *ngFor="let note of notes" (click)="onCardClick(note)">
+          <ion-label>
+            <h3>{{ note.title }}</h3>
+            <p>{{ note.content }}</p>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ng-container>
+  </div>
+
+  <!-- FAB Button for Creating a Note -->
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="selectedDate">
+    <ion-fab-button (click)="createNote()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
