--- a/src/global.scss
+++ b/src/global.scss
@@ -40,6 +40,28 @@
 @import '~quill/dist/quill.snow.css';
 
 
+
+.toolbar-notes{
+  padding-top: 6px;
+  padding-bottom: 4px;
+  border-bottom: 2px  solid #e2e2e2;
+}
+
+
+.toolbar-notes[_ngcontent-ng-c4147089924] {
+  --background: #ffffff;
+}
+
+
+/* Title styling */
+.app-title {
+  font-family: var(--font-family);
+  font-size: 25px;
+  font-weight: bold;
+  text-align: left;
+  color: #000000; /* Black color for the title */
+}
+
 .ql-editor{
     width: 100%;
 }
